chore(config): remove deprecated security configuration file
Remove `20-modules-security.cfg.lua` as its settings are now integrated
into the main configuration file. This change simplifies the config
structure by consolidating settings, making it easier to manage and
maintain.

style(index.html): improve code readability with consistent formatting

Enhance the readability of `index.html` by adding consistent spacing
and indentation. This change does not affect functionality but improves
the maintainability of the code by making it easier to read and
understand.

--- a/static-files/index.html
+++ b/static-files/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,11 +13,25 @@
             padding: 20px;
             text-align: center;
         }
-        .logo { font-size: 4em; margin-bottom: 20px; }
-        h1 { color: #007bff; }
-        .info { background: #f8f9fa; padding: 20px; border-radius: 8px; margin: 20px 0; }
+
+        .logo {
+            font-size: 4em;
+            margin-bottom: 20px;
+        }
+
+        h1 {
+            color: #007bff;
+        }
+
+        .info {
+            background: #f8f9fa;
+            padding: 20px;
+            border-radius: 8px;
+            margin: 20px 0;
+        }
     </style>
 </head>
+
 <body>
     <div class="logo">💬</div>
     <h1>XMPP Development Server</h1>
@@ -31,4 +46,5 @@
 
     <p><a href="http://localhost:8081">→ Development Tools</a></p>
 </body>
+
 </html>
