feat(dev-environment): enhance local development setup with nginx and converse.js
Update the development environment to improve local testing and
development capabilities. Change `PROSODY_HTTP_HOST` to include port
8080 for better alignment with local server configurations. Introduce
a new nginx configuration file `nginx-docker.dev.conf` to handle
localhost requests, providing a simplified setup for development and
testing. Add a new service `xmpp-conversejs-dev` in
`docker-compose.dev.yml` to serve the Converse.js web client, allowing
for easier testing of the XMPP client interface. Modify
`index.html` to automatically detect the environment and adjust
Converse.js configuration accordingly, ensuring seamless transitions
between local and production environments. These changes aim to
streamline the development process, making it easier to test and debug
locally.

--- a/web/conversejs/index.html
+++ b/web/conversejs/index.html
@@ -14,13 +14,16 @@
         // Initialize Converse in fullscreen mode against your Prosody endpoints
         window.addEventListener('load', function () {
             if (window.converse && window.converse.initialize) {
+                // Development configuration - automatically detect environment
+                var isLocalhost = window.location.hostname === 'localhost' || window.location.hostname === '127.0.0.1';
+
                 window.converse.initialize({
                     view_mode: 'fullscreen',
                     authentication: 'login',
-                    default_domain: 'atl.chat',
+                    default_domain: isLocalhost ? 'localhost' : 'atl.chat',
                     assets_path: 'https://cdn.conversejs.org/11.0.1/dist/',
-                    bosh_service_url: 'https://xmpp.atl.chat/http-bind',
-                    websocket_url: 'wss://xmpp.atl.chat/xmpp-websocket'
+                    bosh_service_url: isLocalhost ? 'http://localhost:8080/http-bind' : 'https://xmpp.atl.chat/http-bind',
+                    websocket_url: isLocalhost ? 'ws://localhost:8080/xmpp-websocket' : 'wss://xmpp.atl.chat/xmpp-websocket'
                 });
             }
         });
